--- a/style.css
+++ b/style.css
@@ -6,7 +6,7 @@
     font-family: Arial, Helvetica, sans-serif;
 }
 .container{
-    background-color: #fff;
+    background-color: #191919;
     height: 100vh;
     display: flex;
     justify-content: center;
@@ -15,13 +15,15 @@
 #card{
     height: 420px;
     width: 350px;
-    background-color: #191919;
+    /* background-color: #191919; */
+    background-color: black;
     padding: 30px;
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: space-between;
     border-radius: 20px;
+    box-shadow: 0 0 15px white;
 }
 img{
     height: 200px;
